lib/webidl/parser/webidl.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


# http://www.w3.org/TR/WebIDL/#idl-grammar
module WebIDL
  include Treetop::Runtime

  def root
    @root || :Definitions
  end

  module Definitions0
    def ExtendedAttributeList
      elements[0]
    end

    def ws1
      elements[1]
    end

    def Definition
      elements[2]
    end

    def ws2
      elements[3]
    end

    def Definitions
      elements[4]
    end
  end

  module Definitions1
    def ws1
      elements[0]
    end

    def ws2
      elements[2]
    end
  end

  def _nt_Definitions
    start_index = index
    if node_cache[:Definitions].has_key?(index)
      cached = node_cache[:Definitions][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_ws
    s0 << r1
    if r1
      i3, s3 = index, []
      r4 = _nt_ExtendedAttributeList
      s3 << r4
      if r4
        r5 = _nt_ws
        s3 << r5
        if r5
          r6 = _nt_Definition
          s3 << r6
          if r6
            r7 = _nt_ws
            s3 << r7
            if r7
              r8 = _nt_Definitions
              s3 << r8
            end
          end
        end
      end
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(Definitions0)
      else
        @index = i3
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
      if r2
        r9 = _nt_ws
        s0 << r9
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Definitions1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:Definitions][start_index] = r0

    r0
  end

  def _nt_Definition
    start_index = index
    if node_cache[:Definition].has_key?(index)
      cached = node_cache[:Definition][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_Module
    if r1
      r0 = r1
    else
      r2 = _nt_Interface
      if r2
        r0 = r2
      else
        r3 = _nt_Exception
        if r3
          r0 = r3
        else
          r4 = _nt_TypeDef
          if r4
            r0 = r4
          else
            r5 = _nt_ImplementsStatement
            if r5
              r0 = r5
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end
    end

    node_cache[:Definition][start_index] = r0

    r0
  end

  module Module0
    def ws1
      elements[1]
    end

    def identifier
      elements[2]
    end

    def ws2
      elements[3]
    end

    def ws3
      elements[5]
    end

    def Definitions
      elements[6]
    end

    def ws4
      elements[7]
    end

    def ws5
      elements[9]
    end

  end

  def _nt_Module
    start_index = index
    if node_cache[:Module].has_key?(index)
      cached = node_cache[:Module][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("module", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure("module")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        r3 = _nt_identifier
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            if has_terminal?("{", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("{")
              r5 = nil
            end
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                r7 = _nt_Definitions
                s0 << r7
                if r7
                  r8 = _nt_ws
                  s0 << r8
                  if r8
                    if has_terminal?("}", false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure("}")
                      r9 = nil
                    end
                    s0 << r9
                    if r9
                      r10 = _nt_ws
                      s0 << r10
                      if r10
                        if has_terminal?(";", false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure(";")
                          r11 = nil
                        end
                        s0 << r11
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Module0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:Module][start_index] = r0

    r0
  end

  module Interface0
    def ws1
      elements[1]
    end

    def identifier
      elements[2]
    end

    def ws2
      elements[3]
    end

    def InterfaceInheritance
      elements[4]
    end

    def ws3
      elements[5]
    end

    def ws4
      elements[7]
    end

    def InterfaceMembers
      elements[8]
    end

    def ws5
      elements[9]
    end

    def ws6
      elements[11]
    end

  end

  def _nt_Interface
    start_index = index
    if node_cache[:Interface].has_key?(index)
      cached = node_cache[:Interface][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("interface", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("interface")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        r3 = _nt_identifier
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            r5 = _nt_InterfaceInheritance
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                if has_terminal?("{", false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure("{")
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt_ws
                  s0 << r8
                  if r8
                    r9 = _nt_InterfaceMembers
                    s0 << r9
                    if r9
                      r10 = _nt_ws
                      s0 << r10
                      if r10
                        if has_terminal?("}", false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure("}")
                          r11 = nil
                        end
                        s0 << r11
                        if r11
                          r12 = _nt_ws
                          s0 << r12
                          if r12
                            if has_terminal?(";", false, index)
                              r13 = instantiate_node(SyntaxNode,input, index...(index + 1))
                              @index += 1
                            else
                              terminal_parse_failure(";")
                              r13 = nil
                            end
                            s0 << r13
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Interface0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:Interface][start_index] = r0

    r0
  end

  module InterfaceInheritance0
    def ws
      elements[1]
    end

    def ScopedNameList
      elements[2]
    end
  end

  def _nt_InterfaceInheritance
    start_index = index
    if node_cache[:InterfaceInheritance].has_key?(index)
      cached = node_cache[:InterfaceInheritance][index]
      @index = cached.interval.end if cached
      return cached
    end

    i1, s1 = index, []
    if has_terminal?(":", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure(":")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_ws
      s1 << r3
      if r3
        r4 = _nt_ScopedNameList
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(InterfaceInheritance0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:InterfaceInheritance][start_index] = r0

    r0
  end

  module InterfaceMembers0
    def ExtendedAttributeList
      elements[0]
    end

    def ws1
      elements[1]
    end

    def InterfaceMember
      elements[2]
    end

    def ws2
      elements[3]
    end

    def InterfaceMembers
      elements[4]
    end

    def ws3
      elements[5]
    end
  end

  def _nt_InterfaceMembers
    start_index = index
    if node_cache[:InterfaceMembers].has_key?(index)
      cached = node_cache[:InterfaceMembers][index]
      @index = cached.interval.end if cached
      return cached
    end

    i1, s1 = index, []
    r2 = _nt_ExtendedAttributeList
    s1 << r2
    if r2
      r3 = _nt_ws
      s1 << r3
      if r3
        r4 = _nt_InterfaceMember
        s1 << r4
        if r4
          r5 = _nt_ws
          s1 << r5
          if r5
            r6 = _nt_InterfaceMembers
            s1 << r6
            if r6
              r7 = _nt_ws
              s1 << r7
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(InterfaceMembers0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:InterfaceMembers][start_index] = r0

    r0
  end

  def _nt_InterfaceMember
    start_index = index
    if node_cache[:InterfaceMember].has_key?(index)
      cached = node_cache[:InterfaceMember][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_Const
    if r1
      r0 = r1
    else
      r2 = _nt_AttributeOrOperation
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:InterfaceMember][start_index] = r0

    r0
  end

  module Exception0
    def ws1
      elements[1]
    end

    def identifier
      elements[2]
    end

    def ws2
      elements[3]
    end

    def ws3
      elements[5]
    end

    def ExceptionMembers
      elements[6]
    end

    def ws4
      elements[7]
    end

    def ws5
      elements[9]
    end

  end

  def _nt_Exception
    start_index = index
    if node_cache[:Exception].has_key?(index)
      cached = node_cache[:Exception][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("exception", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("exception")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        r3 = _nt_identifier
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            if has_terminal?("{", false, index)
              r5 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("{")
              r5 = nil
            end
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                r7 = _nt_ExceptionMembers
                s0 << r7
                if r7
                  r8 = _nt_ws
                  s0 << r8
                  if r8
                    if has_terminal?("}", false, index)
                      r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure("}")
                      r9 = nil
                    end
                    s0 << r9
                    if r9
                      r10 = _nt_ws
                      s0 << r10
                      if r10
                        if has_terminal?(";", false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure(";")
                          r11 = nil
                        end
                        s0 << r11
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Exception0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:Exception][start_index] = r0

    r0
  end

  module ExceptionMembers0
    def ExtendedAttributeList
      elements[0]
    end

    def ws1
      elements[1]
    end

    def ExceptionMember
      elements[2]
    end

    def ws2
      elements[3]
    end

    def ExceptionMembers
      elements[4]
    end

    def ws3
      elements[5]
    end
  end

  def _nt_ExceptionMembers
    start_index = index
    if node_cache[:ExceptionMembers].has_key?(index)
      cached = node_cache[:ExceptionMembers][index]
      @index = cached.interval.end if cached
      return cached
    end

    i1, s1 = index, []
    r2 = _nt_ExtendedAttributeList
    s1 << r2
    if r2
      r3 = _nt_ws
      s1 << r3
      if r3
        r4 = _nt_ExceptionMember
        s1 << r4
        if r4
          r5 = _nt_ws
          s1 << r5
          if r5
            r6 = _nt_ExceptionMembers
            s1 << r6
            if r6
              r7 = _nt_ws
              s1 << r7
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(ExceptionMembers0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:ExceptionMembers][start_index] = r0

    r0
  end

  module TypeDef0
    def ws1
      elements[1]
    end

    def Type
      elements[2]
    end

    def ws2
      elements[3]
    end

    def identifier
      elements[4]
    end

    def ws3
      elements[5]
    end

  end

  def _nt_TypeDef
    start_index = index
    if node_cache[:TypeDef].has_key?(index)
      cached = node_cache[:TypeDef][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("typedef", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure("typedef")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        r3 = _nt_Type
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            r5 = _nt_identifier
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                if has_terminal?(";", false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(";")
                  r7 = nil
                end
                s0 << r7
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(TypeDef0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:TypeDef][start_index] = r0

    r0
  end

  module ImplementsStatement0
    def ScopedName1
      elements[0]
    end

    def ws1
      elements[1]
    end

    def ws2
      elements[3]
    end

    def ScopedName2
      elements[4]
    end

    def ws3
      elements[5]
    end

  end

  def _nt_ImplementsStatement
    start_index = index
    if node_cache[:ImplementsStatement].has_key?(index)
      cached = node_cache[:ImplementsStatement][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_ScopedName
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        if has_terminal?("implements", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 10))
          @index += 10
        else
          terminal_parse_failure("implements")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            r5 = _nt_ScopedName
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                if has_terminal?(";", false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(";")
                  r7 = nil
                end
                s0 << r7
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ImplementsStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:ImplementsStatement][start_index] = r0

    r0
  end

  module Const0
    def ws1
      elements[1]
    end

    def Type
      elements[2]
    end

    def ws2
      elements[3]
    end

    def identifier
      elements[4]
    end

    def ws3
      elements[5]
    end

    def ws4
      elements[7]
    end

    def ConstExpr
      elements[8]
    end

    def ws5
      elements[9]
    end

  end

  def _nt_Const
    start_index = index
    if node_cache[:Const].has_key?(index)
      cached = node_cache[:Const][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("const", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure("const")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        r3 = _nt_Type
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            r5 = _nt_identifier
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                if has_terminal?("=", false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure("=")
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt_ws
                  s0 << r8
                  if r8
                    r9 = _nt_ConstExpr
                    s0 << r9
                    if r9
                      r10 = _nt_ws
                      s0 << r10
                      if r10
                        if has_terminal?(";", false, index)
                          r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                          @index += 1
                        else
                          terminal_parse_failure(";")
                          r11 = nil
                        end
                        s0 << r11
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Const0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:Const][start_index] = r0

    r0
  end

  def _nt_ConstExpr
    start_index = index
    if node_cache[:ConstExpr].has_key?(index)
      cached = node_cache[:ConstExpr][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_BooleanLiteral
    if r1
      r0 = r1
    else
      r2 = _nt_integer
      if r2
        r0 = r2
      else
        r3 = _nt_float
        if r3
          r0 = r3
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:ConstExpr][start_index] = r0

    r0
  end

  def _nt_BooleanLiteral
    start_index = index
    if node_cache[:BooleanLiteral].has_key?(index)
      cached = node_cache[:BooleanLiteral][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    if has_terminal?("true", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure("true")
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?("false", false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure("false")
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:BooleanLiteral][start_index] = r0

    r0
  end

  module AttributeOrOperation0
    def ws
      elements[1]
    end

    def StringifierAttributeOrOperation
      elements[2]
    end
  end

  def _nt_AttributeOrOperation
    start_index = index
    if node_cache[:AttributeOrOperation].has_key?(index)
      cached = node_cache[:AttributeOrOperation][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if has_terminal?("stringifier", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 11))
      @index += 11
    else
      terminal_parse_failure("stringifier")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_ws
      s1 << r3
      if r3
        r4 = _nt_StringifierAttributeOrOperation
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(AttributeOrOperation0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r5 = _nt_Attribute
      if r5
        r0 = r5
      else
        r6 = _nt_Operation
        if r6
          r0 = r6
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:AttributeOrOperation][start_index] = r0

    r0
  end

  def _nt_StringifierAttributeOrOperation
    start_index = index
    if node_cache[:StringifierAttributeOrOperation].has_key?(index)
      cached = node_cache[:StringifierAttributeOrOperation][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_Attribute
    if r1
      r0 = r1
    else
      r2 = _nt_OperationRest
      if r2
        r0 = r2
      else
        if has_terminal?(";", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(";")
          r3 = nil
        end
        if r3
          r0 = r3
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:StringifierAttributeOrOperation][start_index] = r0

    r0
  end

  module Attribute0
    def ReadOnly
      elements[0]
    end

    def ws1
      elements[1]
    end

    def ws2
      elements[3]
    end

    def Type
      elements[4]
    end

    def ws3
      elements[5]
    end

    def identifier
      elements[6]
    end

    def ws4
      elements[7]
    end

    def GetRaises
      elements[8]
    end

    def ws5
      elements[9]
    end

    def SetRaises
      elements[10]
    end

    def ws6
      elements[11]
    end

  end

  def _nt_Attribute
    start_index = index
    if node_cache[:Attribute].has_key?(index)
      cached = node_cache[:Attribute][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_ReadOnly
    s0 << r1
    if r1
      r2 = _nt_ws
      s0 << r2
      if r2
        if has_terminal?("attribute", false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 9))
          @index += 9
        else
          terminal_parse_failure("attribute")
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt_ws
          s0 << r4
          if r4
            r5 = _nt_Type
            s0 << r5
            if r5
              r6 = _nt_ws
              s0 << r6
              if r6
                r7 = _nt_identifier
                s0 << r7
                if r7
                  r8 = _nt_ws
                  s0 << r8
                  if r8
                    r9 = _nt_GetRaises
                    s0 << r9
                    if r9
                      r10 = _nt_ws
                      s0 << r10
                      if r10
                        r11 = _nt_SetRaises
                        s0 << r11
                        if r11
                          r12 = _nt_ws
                          s0 << r12
                          if r12
                            if has_terminal?(";", false, index)
                              r13 = instantiate_node(SyntaxNode,input, index...(index + 1))
                              @index += 1
                            else
                              terminal_parse_failure(";")
                              r13 = nil
                            end
                            s0 << r13
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Attribute0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:Attribute][start_index] = r0

    r0
  end

  def _nt_ReadOnly
    start_index = index
    if node_cache[:ReadOnly].has_key?(index)
      cached = node_cache[:ReadOnly][index]
      @index = cached.interval.end if cached
      return cached
    end

    if has_terminal?("readonly", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 8))
      @index += 8
    else
      terminal_parse_failure("readonly")
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:ReadOnly][start_index] = r0

    r0
  end

  module GetRaises0
    def ws
      elements[1]
    end

    def ExceptionList
      elements[2]
    end
  end

  def _nt_GetRaises
    start_index = index
    if node_cache[:GetRaises].has_key?(index)
      cached = node_cache[:GetRaises][index]
      @index = cached.interval.end if cached
      return cached
    end

    i1, s1 = index, []
    if has_terminal?("getraises", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("getraises")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_ws
      s1 << r3
      if r3
        r4 = _nt_ExceptionList
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(GetRaises0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:GetRaises][start_index] = r0

    r0
  end

  module SetRaises0
    def ws
      elements[1]
    end

    def ExceptionList
      elements[2]
    end
  end

  def _nt_SetRaises
    start_index = index
    if node_cache[:SetRaises].has_key?(index)
      cached = node_cache[:SetRaises][index]
      @index = cached.interval.end if cached
      return cached
    end

    i1, s1 = index, []
    if has_terminal?("setraises", false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure("setraises")
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_ws
      s1 << r3
      if r3
        r4 = _nt_ExceptionList
        s1 << r4
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(SetRaises0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:SetRaises][start_index] = r0

    r0
  end
